crates/icydb-core/tests/ui/logical_plan_private.rs
use icydb_core::db::query::plan::LogicalPlan;

fn main() {}
